--- a/public_html/SPIndex2.html
+++ b/public_html/SPIndex2.html
@@ -1138,7 +1138,7 @@ and open the template in the editor.
                                         }
 
                                         //enable sort checkbox
-                                        d3.select("label").select("input").property("disabled", false);
+                                        d3.select("label").select("input").property("disabled", true);
                                         d3.select("label").style("color", "black");
                                         //sort the bars if checkbox is clicked            
                                         d3.select("input").on("change", change);
